WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268569
Unreviewed WatchOS build fix
https://bugs.webkit.org/show_bug.cgi?id=268569
Summary
Unreviewed WatchOS build fix
Chris Dumez
Reported
2024-02-01 13:18:39 PST
Unreviewed WatchOS build fix with recent SDKs
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-01 13:19:01 PST
<
rdar://problem/122127541
>
Chris Dumez
Comment 2
2024-02-01 13:19:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23685
EWS
Comment 3
2024-02-01 14:24:17 PST
Committed
273941@main
(a0294c3a79c9): <
https://commits.webkit.org/273941@main
> Reviewed commits have been landed. Closing PR #23685 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug