Unreviewed WatchOS build fix https://bugs.webkit.org/show_bug.cgi?id=268569 rdar://122127541

* Source/WebCore/platform/graphics/WidthIterator.cpp:
(WebCore::resetGlyphBuffer):

Canonical link: https://commits.webkit.org/273941@main